fix spacing issues in plan index page

--- a/public/stylesheets/plans/index.css
+++ b/public/stylesheets/plans/index.css
@@ -24,6 +24,7 @@ section {
   display: flex;
   flex-direction: column; 
   align-items: center;
+  margin: 10px;
 }
 
 main.add-edit-task {
@@ -63,9 +64,6 @@ table {
   background-color: #FFF4FE;
   padding: 10px;
   width: 100%;
-}
-td {
-  padding: 7px 10px 7px 10px;
 }
 th {
   border-bottom: 1px solid #44323B;
